--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,5 @@ include ':app'
 include ':libs:base-lib'
 include ':libs:net-lib'
 include ':common:view-common'
+include ':common:glide-common'
+include ':common:permissions-common'
