--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
 
-
     <uses-permission
         android:name="android.permission.ACCESS_BACKGROUND_LOCATION"
         tools:node="remove" />
@@ -57,7 +56,9 @@
         <activity android:name=".SmsActivity2" />
         <activity android:name=".net.WanAndroidApiActivity" />
 
-        <receiver android:name=".SmsReceiver">
+        <receiver
+            android:name=".SmsReceiver"
+            android:exported="true">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
