--- a/buildLibrary.gradle
+++ b/buildLibrary.gradle
@@ -5,6 +5,11 @@ apply {
 }
 
 android {
+    //${模块名称} 例如":permissions-common" 会截取出 "permissions"
+    //namespace 命名规范：Config.baseNamespace + "${模块所在目录名称}" + "${模块名称}"
+//    namespace moduleNamespace
+
+    println "moduleNamespace: $namespace"
 
     compileSdk Config.compileSdk
 
@@ -52,9 +57,26 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 
-    implementation Config.packages.base
-    testImplementation Config.packages.baseTest
-    androidTestImplementation Config.packages.baseAndroidTest
+//    implementation Config.packages.base
+//    testImplementation Config.packages.baseTest
+//    androidTestImplementation Config.packages.baseAndroidTest
+
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
+
+    //同版本2.6.1
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    //同版本7.4.2
+    implementation 'androidx.databinding:databinding-runtime:7.4.2'
 
 }
 
